Windsurf refactoring - a new hope